test_cases/pass/p43.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL a, b, c, result
a="FALSE"
b="FALSE"
c="TRUE"
result=(a OR b AND c)
PRINT: result
END SCRIPT
