test_cases/fail/f44.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL a, b
DECLARE INT x
a="TRUE"
b="FALSE"
x=(a OR b)
END SCRIPT
